Bug 383972 - The peerstimeline proxy order is unstable/racy
Summary: The peerstimeline proxy order is unstable/racy
Status: RESOLVED FIXED
Alias: None
Product: ring-kde
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Emmanuel Lepage Vallée
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-24 20:55 UTC by Emmanuel Lepage Vallée
Modified: 2019-02-28 19:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Emmanuel Lepage Vallée 2017-08-24 20:55:40 UTC
The peerstimelinemodel used by the left pane is prone to race conditions when the applications load. The individual peer timeline too (not to be confused with the peerS timeline).

This is caused by the deduplication algorithm and seems to have regressed with all the recent memory managment changes that affected the loading order. The race did exist before, but as the loading order was different, it was unlikely (but as stree tests showed, not impossible). With the current HEAD commit, there is about a 50/50 chance of being wrong.

This is in itself good news, as it shows the loading is a bit saner. However it has to be fixed as it renders the app unusable. The items that should be at the top can only be accessed using the search feature.