peerstimeline: Take into account the deduplicated elements in the proxy

Before this commit, there was a race condition where the "head" of
the peerstimelinemodel could have been a duplicate CM. As `==` was
used on the pointer, it returned false when the other CM was the new
"real" ContactMethod referenced by the duplicate.

BUG: 383972